@@ -126,8 +126,4 @@ $autoload['language'] = array();
 |
 |	$autoload['model'] = array('first_model' => 'first');
 */
-$autoload['model'] = array('collections');
-$autoload['model'] = array('codes');
-$autoload['model'] = array('players');
-$autoload['model'] = array('series');
-$autoload['model'] = array('transactions');
+$autoload['model'] = array('collections','players', 'series', 'transactions');
