@@ -3,7 +3,7 @@
 class Collections extends MY_Model {
     // constructor
     function __construct() {
-        //parameter: 'tableName','orderByTableColumn
-        parent::__construct('collections','Datetime');
+        //parameter: 'tableName','pk'
+        parent::__construct('collections','Player');
     }
 }
