@@ -14,6 +14,6 @@
 class Players extends MY_Model{
     function __construct() {
         //parameter: 'tableName','orderByTableColumn
-        parent::__construct('players','peanuts');
+        parent::__construct('players','Player');
     }
 }
