@@ -14,6 +14,6 @@
 class Series extends MY_Model{
     function __construct() {
         //parameter: 'tableName','orderByTableColumn
-        parent::__construct('series','value');
+        parent::__construct('series','Series');
     }
 }
