@@ -11,31 +11,5 @@
     </table>
 </div>
 <div class="right-panel">
-    <table class="table-right-game">
-        <tr>
-            <th>Player</th>
-            <th>Equity</th>
-            <th>Cash</th>
-        </tr>
-        <tr>
-            <td>Mikey</td>
-            <td>200</td>
-            <td>20</td>
-        </tr>
-        <tr>
-            <td>Donald</td>
-            <td>100</td>
-            <td>200</td>
-        </tr>
-        <tr>
-            <td>George</td>
-            <td>150</td>
-            <td>10</td>
-        </tr>
-        <tr>
-            <td>Henry</td>
-            <td>1000</td>
-            <td>50</td>
-        </tr>
-    </table>
+    {wtable}
 </div>
