@@ -33,4 +33,9 @@ MM/DD/YY @ HH:MM - Description of change - (Initials)
 02/12/16 @ 16:16 - Created Series.php model - (JL)
 02/12/16 @ 16:17 - Created Transactions.php model - (JL)
 
-02/13/16 @ 13:50 - Updated autoload.php with models - (JL)
+02/13/16 @ 12:14 - Removed Codes.php model (not needed) - (CS)
+02/13/16 @ 12:15 - Fixed model parameters - (CS)
+02/13/16 @ 12:22 - Modified autoload.php to autoload previously created models - (CS)
+02/13/16 @ 12:25 - Modified ln28 in Assembly.php controller - (CS)
+02/13/16 @ 13:32 - Modified welcome.php view - (CS)
+02/13/16 @ 13:43 - Modified Collection.php model - (CS)
